<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaupp.sensordemo.SensorMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:text="@string/sensors_text"/>
        <Button
            android:id="@+id/gravity"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity"
            android:onClick="StartGravity"
            android:visibility="gone"/>
        <Button
            android:id="@+id/accelerometer"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer"
            android:onClick="StartAcceleration"
            android:visibility="gone"/>
        <Button
            android:id="@+id/gyro"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyroscope"
            android:onClick="StartGyroscope"
            android:visibility="gone"/>
        <Button
            android:id="@+id/light"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:onClick="StartLight"
            android:visibility="gone"/>
        <Button
            android:id="@+id/magnetic"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magnetic"
            android:onClick="StartMagnetic"
            android:visibility="gone"/>
        <Button
            android:id="@+id/pressure"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:onClick="StartPressure"
            android:visibility="gone"/>
        <Button
            android:id="@+id/proximity"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proximity"
            android:onClick="StartProximity"
            android:visibility="gone"/>
        <Button
            android:id="@+id/ambtemp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambtemp"
            android:onClick="StartAmbient"
            android:visibility="gone"/>
        <Button
            android:id="@+id/linacc"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linacc"
            android:onClick="StartLinearAcceleration"
            android:visibility="gone"/>
        <Button
            android:id="@+id/relhum"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relhum"
            android:onClick="StartHumidity"
            android:visibility="gone"/>
        <Button
            android:id="@+id/rotvec"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotvec"
            android:onClick="StartRotationVector"
            android:visibility="gone"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
